--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div id="typed-strings">
                 <p>Nice to meet you!</p>
                 <p>I'm Front-end Web Developer</p>
-                <p>Love structure, order and problem solving</p>
+                <p>Love structure and problem solving</p>
             </div>
             <span id="typed"></span>
         </div>
@@ -784,26 +784,17 @@
             </p>
             <hr />
             <div class="row">
-                <div class="col-md-1"></div>
-                <div class="col-md-4">
+                <div class="col-md-2 col-md-offset-5">
                     <ul class="no-bullets">
                         <li>
                             <a href="mailto:moc.liamg@628gnest.anit" target="_blank">
                                 <i class="fa fa-envelope-o fa-2x"></i>
                             </a>
                         </li>
-                    </ul>
-                </div>
-                <div class="col-md-2">
-                        <ul class="no-bullets">
-                            <li>
-                                <a href="https://www.linkedin.com/in/tina-tseng-frontend/" target="_blank">
-                                <i class="fa fa-linkedin-square fa-2x"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                <div class="col-md-4">
-                    <ul class="no-bullets">
+                        <li>
+                            <a href="https://www.linkedin.com/in/tina-tseng-frontend/" target="_blank">
+                            <i class="fa fa-linkedin-square fa-2x"></i></a>
+                        </li>
                         <li>
                             <a href="https://github.com/TinaTseng" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
                         </li>
