--- a/index.html
+++ b/index.html
@@ -784,21 +784,16 @@
             </p>
             <hr />
             <div class="row">
-                <div class="col-md-2 col-md-offset-5">
-                    <ul class="no-bullets">
-                        <li>
-                            <a href="mailto:moc.liamg@628gnest.anit" target="_blank">
-                                <i class="fa fa-envelope-o fa-2x"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/tina-tseng-frontend/" target="_blank">
-                            <i class="fa fa-linkedin-square fa-2x"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/TinaTseng" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
-                        </li>
-                    </ul>
+                <div class="col-md-2 col-md-offset-5">      
+                    <a href="mailto:moc.liamg@628gnest.anit" target="_blank">
+                        <i class="fa fa-envelope-o fa-2x"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/tina-tseng-frontend/" target="_blank">
+                        <i class="fa fa-linkedin-square fa-2x"></i>
+                    </a>
+                    <a href="https://github.com/TinaTseng" target="_blank">
+                        <i class="fa fa-github-square fa-2x"></i>
+                    </a>
                 </div>
             </div>
         </div>
