Updated contact icon

--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
             </p>
             <hr />
             <div class="row">
-                <div class="col-md-4 col-md-offset-4">      
+                <div class="col-md-4 col-md-offset-4 text-center">      
                     <a href="mailto:moc.liamg@628gnest.anit" target="_blank">
                         <i class="fa fa-envelope-o fa-2x"></i>
                     </a>
