Update job content

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div id="typed-strings">
                 <p>Nice to meet you!</p>
                 <p>I'm Front-end Web Developer</p>
-                <p>Love structure and problem solving</p>
+                <p>Love structure and problem solving.</p>
             </div>
             <span id="typed"></span>
         </div>
@@ -115,12 +115,11 @@
                                 <strong>Frontend Developer</strong>
                                 <span class="hidden-phone">
                                   <ul>
-                                    <li>Implement the front end for web applications according to demands.</li>
-                                    <li>Improve UX/UI and performance for previous product.</li>
-                                    <li>Participate product and application development lifecycle, focus on UX/UI design both for PC and mobile device.</li>
-                                    <li>Collaborate with backend engineers to build features and solve problems.</li>
+                                    <li>Build web applications according to business initiatives. The latest project using React and Lumen.</li>
+                                    <li>Work closely with product designers and backend engineers to implement new business requirements.</li>
                                     <li>Develop, implement and maintain the <a href="http://www.4ipnet.com/" target="_blank">official site</a></li>
-                                    <li>Experience using PHP framework such as CodeIgniter and Smarty</li>
+                                    <li>Improve UX/UI and performance for previous product.</li>
+                                    <li>Participate product and application development lifecycle, focus on UX/UI design both for desktop and mobile browsers.</li>
                                   </ul></span>
                                 <span class="experience-details">
                                    <span class="location">
