Modified cv button

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <strong>居住地 :</strong>
                         <br /> 台北市
                     </p>
-                    <a href="http://tinatseng.byethost17.com/cv/Tina_Tseng_Resume.pdf" target="_blank" class="btn btn-warning" role="button">CV Download</a>
+                    <a href="http://tinatseng.byethost17.com/cv/Tina_Tseng_Resume.pdf" target="_blank" class="btn btn-warning" role="button">Download My CV</a>
                 </div>
             </div>
         </div>
