--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </p>
                 </div>
                 <div class="col-md-4 text-center">
-                    <img src="view/images/me.jpg" alt="Tina Tseng">
+                    <img src="view/images/tina.jpg" alt="Tina Tseng">
                 </div>
                 <div class="col-md-4">
                     <h3>基本資料</h3>
