--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="col-md-4">
                 <h3>關於</h3>
                     <p>
-                    1-2年前端開發經驗（6年程式撰寫經驗），現擔任傳象科技公司的前端工程師。我熟悉 HTML5、CSS3、JavaScript (ES6) 等前端開發語言，並持續學習Node.js、React等最新技術。
+                    2年前端開發經驗（6年程式撰寫經驗），現擔任傳象科技公司的前端工程師。我熟悉 HTML5、CSS3、JavaScript (ES2015+) 等前端開發語言，並持續學習Node.js、React等最新技術。
                     <br/>
                     畢業於元智大學資訊工程學系。大學期間曾獲得微軟《潛能創意盃》「軟體設計組」第二名。<a href="https://www.microsoft.com/taiwan/imaginecup/history.aspx" target="_blank">&nbsp;<i class="fa fa-external-link" aria-hidden="true"></i>&nbsp;相關報導</a>
                     </p>
@@ -409,12 +409,12 @@
                             </span>
                         </li>
                         <li>
-                            <span class="ability-title">Backbone.js</span>
+                            <span class="ability-title">React</span>
                             <span class="ability-score">
                             <span class="glyphicon glyphicon-star filled"></span>
                             <span class="glyphicon glyphicon-star filled"></span>
                             <span class="glyphicon glyphicon-star filled"></span>
-                            <span class="glyphicon glyphicon-star "></span>
+                            <span class="glyphicon glyphicon-star filled"></span>
                             <span class="glyphicon glyphicon-star "></span>
                             </span>
                         </li>
@@ -478,7 +478,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="ability-title">React</span>
+                                <span class="ability-title">Node.js</span>
                                 <span class="ability-score">
                     
                                 <span class="glyphicon glyphicon-star filled"></span>
@@ -489,7 +489,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="ability-title">Node.js</span>
+                                <span class="ability-title">Express</span>
                                 <span class="ability-score">      
                                 <span class="glyphicon glyphicon-star filled"></span>
                                 <span class="glyphicon glyphicon-star filled"></span>
@@ -499,7 +499,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="ability-title">ExpressJS</span>
+                                <span class="ability-title">Backbone.js</span>
                                 <span class="ability-score">      
                                 <span class="glyphicon glyphicon-star filled"></span>
                                 <span class="glyphicon glyphicon-star filled"></span>
