--- a/index.html
+++ b/index.html
@@ -694,8 +694,8 @@
                 <div class="work-item">
                     <img src="view/images/portfolio/4ipnetweb-550.png" alt="">
                     <div class="work-inner">
-                        <a class="work-zoom" href="#workID-3"><i class="fa fa-search"></i></a>
-                        <a class="work-zoom" href="http://www.4ipnet.com"><i class="fa fa-external-link"></i></a>
+                        <a class="work-zoom search" href="#workID-3"><i class="fa fa-search"></i></a>
+                        <a class="work-zoom ext-link" href="http://www.4ipnet.com" target="_blank"><i class="fa fa-external-link"></i></a>
                     </div>
                 </div>
                 <div id="workID-3" class="mfp-hide work-popup">
