--- a/index.html
+++ b/index.html
@@ -713,6 +713,7 @@
                     <img src="view/images/portfolio/shiftphoto.png" alt="">
                     <div class="work-inner">
                         <a class="work-zoom" href="#workID-5"><i class="fa fa-search"></i></a>
+                        <a class="ext-link" href="http://eyetravel.byethost11.com" target="_blank"><i class="fa fa-external-link"></i></a>
                     </div>
                 </div>
                 <div id="workID-5" class="mfp-hide work-popup">
