--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
                 <div class="work-item">
                     <img src="view/images/portfolio/shiftphoto.png" alt="">
                     <div class="work-inner">
-                        <a class="work-zoom" href="#workID-5"><i class="fa fa-search"></i></a>
+                        <a class="work-zoom search" href="#workID-5"><i class="fa fa-search"></i></a>
                         <a class="ext-link" href="http://eyetravel.byethost11.com" target="_blank"><i class="fa fa-external-link"></i></a>
                     </div>
                 </div>
