--- a/index.html
+++ b/index.html
@@ -775,13 +775,13 @@
             <div class="row">
                 <div class="col-md-4 col-md-offset-4 text-center">      
                     <a href="mailto:moc.liamg@628gnest.anit" target="_blank">
-                        <i class="fa fa-envelope-o fa-2x"></i>
+                        <i class="fa fa-envelope-square fa-3x"></i>
                     </a>
                     <a href="https://www.linkedin.com/in/tina-tseng-frontend/" target="_blank">
-                        <i class="fa fa-linkedin-square fa-2x"></i>
+                        <i class="fa fa-linkedin-square fa-3x"></i>
                     </a>
                     <a href="https://github.com/TinaTseng" target="_blank">
-                        <i class="fa fa-github-square fa-2x"></i>
+                        <i class="fa fa-github-square fa-3x"></i>
                     </a>
                 </div>
             </div>
