--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
 <body data-spy="scroll" data-target="#navbar-example">
     <div id="top" class="jumbotron">
         <div class="container">
-            <h1>Hello! I'm Tina Tseng</h1>
+            <h1>I </h1>
             <div id="typed-strings">
-                <p>Nice to meet you!</p>
-                <p>I'm Front-end Web Developer</p>
-                <p>Love structure and problem solving.</p>
+                <p>am Tina</p>
+                <p>am Front-end Developer</p>
+                <p>love structure</p>
+                <p>love problem solving.</p>
             </div>
             <span id="typed"></span>
         </div>
