--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
         <div class="container">
             <h1>I </h1>
             <div id="typed-strings">
-                <p>am Tina</p>
-                <p>am Front-end Developer</p>
-                <p>love structure</p>
-                <p>love problem solving.</p>
+                <p> am Tina.</p>
+                <p> am Front-end Developer.</p>
+                <p> love structure.</p>
+                <p> love problem solving.</p>
             </div>
             <span id="typed"></span>
         </div>
         <!-- <div id="video-bg"></div> -->
-        <div class="overlay"></div>
+        <!-- <div class="overlay"></div> -->
         <a href="#profile" class="scroll-down">
             <span class="glyphicon glyphicon-hand-down"></span>
         </a>
