--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body data-spy="scroll" data-target="#navbar-example">
     <div id="top" class="jumbotron">
         <div class="container">
-            <h1>I </h1>
+            <h1>I&nbsp;</h1>
             <div id="typed-strings">
                 <p> am Tina.</p>
                 <p> am Front-end Developer.</p>
