--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <div class="container">
             <h1>I&nbsp;</h1>
             <div id="typed-strings">
-                <p> am Tina.</p>
-                <p> am Front-end Developer.</p>
-                <p> love structure.</p>
-                <p> love problem solving.</p>
+                <p>am <span style="color:#54A990;">Tina.</span></p>
+                <p>am <span style="color:#54A990;">Front-end Developer.<span></p>
+                <p><span style="color:rgba(211, 47, 14, 0.8);">Love</span> structure.</p>
+                <p><span style="color:rgba(211, 47, 14, 0.8);">Love</span> problem solving.</p>
             </div>
             <span id="typed"></span>
         </div>
