--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <p><span style="color:rgba(211, 47, 14, 0.8);">Love</span> problem solving.</p>
             </div>
             <span id="typed"></span>
+            <p class="subtitle">I'm looking to grow professionally and involved in projects that I can be proud of, join an amazing team.</p>
         </div>
         <!-- <div id="video-bg"></div> -->
         <!-- <div class="overlay"></div> -->
