--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="col-md-4">
                 <h3>關於我</h3>
                     <p>
-                    <sapn class="emWord">2<span>年前端開發經驗（6年程式撰寫經驗），現擔任傳象科技公司的前端工程師。我熟悉 HTML5、CSS3、JavaScript (ES2015+) 等前端開發語言，並持續學習Node.js、React等最新技術。
+                    <sapn class="emWord">2</span>年前端開發經驗（6年程式撰寫經驗），現擔任傳象科技公司的前端工程師。我熟悉 HTML5、CSS3、JavaScript (ES2015+) 等前端開發語言，並持續學習Node.js、React等最新技術。
                     <br/>
                     畢業於元智大學資訊工程學系。大學期間曾獲得微軟《潛能創意盃》「軟體設計組」第二名。<a href="https://www.microsoft.com/taiwan/imaginecup/history.aspx" target="_blank">&nbsp;<i class="fa fa-external-link" aria-hidden="true"></i>&nbsp;相關報導</a>
                     </p>
