Update job description

--- a/index.html
+++ b/index.html
@@ -116,11 +116,17 @@
                                 <strong>Frontend Developer</strong>
                                 <span class="hidden-phone">
                                   <ul>
-                                    <li>Build web applications according to business initiatives. The latest project using React and Lumen.</li>
+                                    <!-- <li>Build web applications according to business initiatives. The latest project using React and Lumen.</li>
                                     <li>Work closely with product designers and backend engineers to implement new business requirements.</li>
                                     <li>Develop, implement and maintain the <a href="http://www.4ipnet.com/" target="_blank">official site</a></li>
                                     <li>Improve UX/UI and performance for previous product.</li>
-                                    <li>Participate product and application development lifecycle, focus on UX/UI design both for desktop and mobile browsers.</li>
+                                    <li>Participate product and application development lifecycle, focus on UX/UI design both for desktop and mobile browsers.</li> -->
+                                  <li>根據公司業務需求設計、開發及維護網頁應用程式（e.g.  Admin  system,  Dashboard,  Web  Builder)，目前最新進行的專案為Cloud  Controller，使用React、Semantic  UI、RESTful  API及Lumen。</li>
+                                  <li>將PSD轉換成前端頁面製作，與動態效果呈現。</li>
+                                  <li>與後端API串接，擬定規範及細項。</li>
+                                  <li>官方網站改版、建置及維護.  (敬請參觀指教：<a href="http://www.4ipnet.com/" target="_blank">http://www.4ipnet.com</a>)</li>
+                                  <li>優化原有產品的使用者體驗及前端架構。</li>
+                                  <li>溝通能力良好，對程式開發具有熱情，願意嘗試新技術及架構。</li>
                                   </ul></span>
                                 <span class="experience-details">
                                    <span class="location">
