Update job description

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         </div>
                         <div class="col-md-8">
                             <p>
-                                <strong>Frontend Developer</strong>
+                                <strong>前端工程師 Frontend Developer</strong>
                                 <span class="hidden-phone">
                                   <ul>
                                     <!-- <li>Build web applications according to business initiatives. The latest project using React and Lumen.</li>
