--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         <div class="experiences">
                 <div class="experience row">
                         <div class="col-md-4">
+                            <img src="view/images/4ipnet.png" alt="4ipnet" class="jobIcon">
                             <h4>傳象科技股份有限公司</h4>
                             <p class="experience-period">
                                 May 2016 - current </p>
@@ -165,6 +166,7 @@
             </div>
             <div class="experience row">
                 <div class="col-md-4">
+                    <img src="view/images/ctci.png" alt="ctci" class="jobIcon">
                     <h4>中鼎工程股份有限公司</h4>
                     <p class="experience-period">
                         Aug 2010 - Jun 2014 </p>
@@ -192,6 +194,7 @@
             </div>
             <div class="experience row">
                 <div class="col-md-4">
+                    <img src="view/images/pegatron.png" alt="4ipnet" class="jobIcon">
                     <h4>和碩聯合科技股份有限公司</h4>
                     <p class="experience-period">
                         Jan 2008 - Mar 2009 </p>
