--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </div>
             <div class="experience row">
                 <div class="col-md-4">
-                    <img src="view/images/ctci.png" alt="ctci" class="jobIcon">
+                    <img src="view/images/ctci.png" alt="CTCI" class="jobIcon ctciIcon">
                     <h4>中鼎工程股份有限公司</h4>
                     <p class="experience-period">
                         Aug 2010 - Jun 2014 </p>
@@ -194,7 +194,7 @@
             </div>
             <div class="experience row">
                 <div class="col-md-4">
-                    <img src="view/images/pegatron.png" alt="4ipnet" class="jobIcon">
+                    <img src="view/images/pegatron.png" alt="Pegatron" class="jobIcon pegaIcon">
                     <h4>和碩聯合科技股份有限公司</h4>
                     <p class="experience-period">
                         Jan 2008 - Mar 2009 </p>
