--- a/index.html
+++ b/index.html
@@ -108,9 +108,11 @@
                 <div class="experience row">
                         <div class="col-md-4">
                             <img src="view/images/4ipnet.png" alt="4ipnet" class="jobIcon">
-                            <h4>傳象科技股份有限公司</h4>
-                            <p class="experience-period">
-                                May 2016 - current </p>
+                            <div class="jobTitle">
+                                <h4>傳象科技股份有限公司</h4>
+                                <p class="experience-period">
+                                    May 2016 - current </p>
+                            </div>
                         </div>
                         <div class="col-md-8">
                             <p>
