Update job layout for tablet

--- a/index.html
+++ b/index.html
@@ -169,9 +169,11 @@
             <div class="experience row">
                 <div class="col-md-4">
                     <img src="view/images/ctci.png" alt="CTCI" class="jobIcon ctciIcon">
-                    <h4>中鼎工程股份有限公司</h4>
-                    <p class="experience-period">
-                        Aug 2010 - Jun 2014 </p>
+                    <div class="jobTitle">
+                        <h4>中鼎工程股份有限公司</h4>
+                        <p class="experience-period">
+                            Aug 2010 - Jun 2014 </p>
+                    </div>
                 </div>
                 <div class="col-md-8">
                     <p>
@@ -197,9 +199,11 @@
             <div class="experience row">
                 <div class="col-md-4">
                     <img src="view/images/pegatron.png" alt="Pegatron" class="jobIcon pegaIcon">
-                    <h4>和碩聯合科技股份有限公司</h4>
-                    <p class="experience-period">
-                        Jan 2008 - Mar 2009 </p>
+                    <div class="jobTitle">
+                        <h4>和碩聯合科技股份有限公司</h4>
+                        <p class="experience-period">
+                            Jan 2008 - Mar 2009 </p>
+                    </div>
                 </div>
                 <div class="col-md-8">
                     <p>
