--- a/index.html
+++ b/index.html
@@ -792,13 +792,25 @@
             <div class="row">
                 <div class="col-md-4 col-md-offset-4 text-center">      
                     <a href="mailto:moc.liamg@628gnest.anit" target="_blank">
-                        <i class="fa fa-envelope-square fa-3x"></i>
+                        <span class="fa-stack fa-lg">
+                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <!-- <i class="fa fa-envelope-square fa-3x"></i> -->
                     </a>
                     <a href="https://www.linkedin.com/in/tina-tseng-frontend/" target="_blank">
-                        <i class="fa fa-linkedin-square fa-3x"></i>
+                        <span class="fa-stack fa-lg">
+                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <!-- <i class="fa fa-linkedin-square fa-3x"></i> -->
                     </a>
                     <a href="https://github.com/TinaTseng" target="_blank">
-                        <i class="fa fa-github-square fa-3x"></i>
+                        <span class="fa-stack fa-lg">
+                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <!-- <i class="fa fa-github-square fa-3x"></i> -->
                     </a>
                 </div>
             </div>
