Update icons style

--- a/index.html
+++ b/index.html
@@ -806,11 +806,7 @@
                         <!-- <i class="fa fa-linkedin-square fa-3x"></i> -->
                     </a>
                     <a href="https://github.com/TinaTseng" target="_blank">
-                        <span class="fa-stack fa-lg">
-                            <i class="fa fa-circle fa-stack-2x"></i>
-                            <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <!-- <i class="fa fa-github-square fa-3x"></i> -->
+                        <i class="fa fa-github fa-2x"></i>
                     </a>
                 </div>
             </div>
