--- a/index.html
+++ b/index.html
@@ -693,16 +693,16 @@
             <!-- item -->   
             <div class="grid-item col-md-6 col-sm-6 col-xs-12 cplist">
                 <div class="work-item">
-                    <img src="view/images/portfolio/cplist-2-600.png" alt="">
+                    <img src="view/images/portfolio/dashboard.png" alt="">
                     <div class="work-inner">
                         <a class="work-zoom" href="#workID-2"><i class="fa fa-search"></i></a>
                     </div>
                 </div>
                 <div id="workID-2" class="mfp-hide work-popup">
-                    <img src="view/images/portfolio/cplist-2-600.png" alt="">
+                    <img src="view/images/portfolio/dashboard.png" alt="">
                     <div class="work-popup-content">
-                        <h3>Captive Portals List</h3>
-                        <p>This page is to have an overview of prepared captive portals. There are basic information including captive portal name, configured authentication options, creator of captive portal, and last modified time.</p>
+                        <h3>Dashboard</h3>
+                        <p>This page is to have an overview of system information, deploy status of access points.</p>
                     </div>
                 </div> 
             </div>
