--- a/index.html
+++ b/index.html
@@ -719,7 +719,10 @@
                     <a href="http://4ipnet.com/" target="_blank"><img src="view/images/portfolio/4ipnetweb-550.png" alt=""></a>
                     <div class="work-popup-content">
                         <h3>4ipnet Official Site</h3>
+                        <p><em>專案說明</em></p>
                         <p>Through brainstormed and discussed with marketing department, I designed and completed the official site of our company. The website implemented by CodeIgniter PHP framework, Bootstrap framework and PHP & MySQL.</p>
+                        <p><em>使用技術</em></p>
+                        <p>HTML5、CSS3、JavaScript、jQuery、Bootstrap、PHP、MySQL、CodeIgniter</p>
                     </div>
                 </div> 
             </div>
