--- a/index.html
+++ b/index.html
@@ -669,24 +669,34 @@
                 <div id="workID-1" class="mfp-hide work-popup">
                     <img src="view/images/portfolio/cp-editor-600.png" alt="">
                     <div class="work-popup-content">
-                        <h3>Captive Portal Editor</h3>
-                        <p>Captive portal editor is a web builder to create HTML page without any knowledge of coding. It's an alternative to common WYSIWYG editors and make your efforts easier and faster.</p>
+                        <h3>網頁客製化應用程式</h3>
+                        <p><em>專案說明</em></p>
+                        <p>不需要寫程式，透過拖拉元件的方式，即能做出網頁</p>
+                        <p><em>使用技術</em></p>
+                        <p>HTML5、CSS3、JavaScript、jQuery、Backbone.js</p>
+                        <!-- <h3>Captive Portal Editor</h3>
+                        <p>Captive portal editor is a web builder to create HTML page without any knowledge of coding. It's an alternative to common WYSIWYG editors and make your efforts easier and faster.</p> -->
                     </div>
                 </div> 
             </div>
             <!-- item -->   
             <div class="grid-item col-md-6 col-sm-6 col-xs-12 ill">
                 <div class="work-item">
-                    <img src="view/images/portfolio/setupwizard.png" alt="">
+                    <img src="view/images/portfolio/APM-SetupWizard.png" alt="">
                     <div class="work-inner">
                         <a class="work-zoom" href="#workID-4"><i class="fa fa-search"></i></a>
                     </div>
                 </div>
                 <div id="workID-4" class="mfp-hide work-popup">
-                    <img src="view/images/portfolio/setupwizard.png" alt="">
+                    <img src="view/images/portfolio/APM-SetupWizard.png" alt="">
                     <div class="work-popup-content">
-                        <h3>Setup Wizard</h3>
-                        <p>A step by step setup wizard that help our client quickly and easily to set up the system.</p>
+                        <h3>APM100</h3>
+                        <p><em>專案說明</em></p>
+                        <p>輕量型Access Point控制管理系統，新增網頁客製化的功能</p>
+                        <p><em>使用技術</em></p>
+                        <p>HTML5、CSS3、JavaScript、jQuery、Google Map API</p>
+                        <!-- <h3>Setup Wizard</h3>
+                        <p>A step by step setup wizard that help our client quickly and easily to set up the system.</p> -->
                     </div>
                 </div> 
             </div>
@@ -701,8 +711,11 @@
                 <div id="workID-2" class="mfp-hide work-popup">
                     <img src="view/images/portfolio/dashboard.png" alt="">
                     <div class="work-popup-content">
-                        <h3>Dashboard</h3>
-                        <p>This page is to have an overview of system information, deploy status of access points.</p>
+                        <h3>雲端無線網路管理系統</h3>
+                        <p><em>專案說明</em></p>
+                        <p>大量、快速集中、方便管理的Access Point設備雲端控制管理系統</p>
+                        <p><em>使用技術</em></p>
+                        <p>HTML5、CSS3、JavaScript、React、Redux、Semantic UI、RESTful API、PHP、Lumen</p>
                     </div>
                 </div> 
             </div>
@@ -718,9 +731,9 @@
                 <div id="workID-3" class="mfp-hide work-popup">
                     <a href="http://4ipnet.com/" target="_blank"><img src="view/images/portfolio/4ipnetweb-550.png" alt=""></a>
                     <div class="work-popup-content">
-                        <h3>4ipnet Official Site</h3>
+                        <h3>傳象科技官方網站</h3>
                         <p><em>專案說明</em></p>
-                        <p>Through brainstormed and discussed with marketing department, I designed and completed the official site of our company. The website implemented by CodeIgniter PHP framework, Bootstrap framework and PHP & MySQL.</p>
+                        <p>與業務、行銷部門共同合作，翻新傳象科技的官方網站</p>
                         <p><em>使用技術</em></p>
                         <p>HTML5、CSS3、JavaScript、jQuery、Bootstrap、PHP、MySQL、CodeIgniter</p>
                     </div>
@@ -739,8 +752,13 @@
                 <div id="workID-5" class="mfp-hide work-popup">
                     <a href="http://eyetravel.byethost11.com" target="_blank"><img src="view/images/portfolio/shiftphoto.png" alt=""></a>
                     <div class="work-popup-content">
-                        <h3>Shiftphoto</h3>
-                        <p>A waterfall layout photo website implemented by Masonry JavaScript library.</p>
+                        <h3>瀑布式圖片流覽網頁</h3>
+                        <p><em>專案說明</em></p>
+                        <p>使用Masonry JavaScript grid layout library實作圖片瀏覽網頁</p>
+                        <p><em>使用技術</em></p>
+                        <p>HTML5、CSS3、JavaScript、jQuery、Masonry library</p>
+                        <!-- <h3>Shiftphoto</h3>
+                        <p>A waterfall layout photo website implemented by Masonry JavaScript library.</p> -->
                     </div>
                 </div> 
             </div>
@@ -755,8 +773,13 @@
                 <div id="workID-6" class="mfp-hide work-popup">
                     <img src="view/images/portfolio/wifi-Login-600.png" alt="">
                     <div class="work-popup-content">
-                        <h3>Wi-fi Login Page</h3>
-                        <p>This Wi-Fi Login page is made for Korean client with two languages English and Korean.</p>
+                        <h3>Ｗi-Fi 登入頁面</h3>
+                        <p><em>專案說明</em></p>
+                        <p>因應韓國客戶實作包含英文與韓文的Wi-Fi登入頁面</p>
+                        <p><em>使用技術</em></p>
+                        <p>Bootstrap、HTML5、CSS3、JavaScript、jQuery</p>
+                        <!-- <h3>Wi-fi Login Page</h3>
+                        <p>This Wi-Fi Login page is made for Korean client with two languages English and Korean.</p> -->
                     </div>
                 </div> 
             </div>
