--- a/index.html
+++ b/index.html
@@ -670,9 +670,9 @@
                     <img src="view/images/portfolio/cp-editor-600.png" alt="">
                     <div class="work-popup-content">
                         <h3>網頁客製化應用程式</h3>
-                        <p><em>專案說明</em></p>
+                        <p class="sub-header">專案說明</p>
                         <p>不需要寫程式，透過拖拉元件的方式，即能做出網頁</p>
-                        <p><em>使用技術</em></p>
+                        <p class="sub-header">使用技術</p>
                         <p>HTML5、CSS3、JavaScript、jQuery、Backbone.js</p>
                         <!-- <h3>Captive Portal Editor</h3>
                         <p>Captive portal editor is a web builder to create HTML page without any knowledge of coding. It's an alternative to common WYSIWYG editors and make your efforts easier and faster.</p> -->
@@ -691,9 +691,9 @@
                     <img src="view/images/portfolio/APM-SetupWizard.png" alt="">
                     <div class="work-popup-content">
                         <h3>APM100</h3>
-                        <p><em>專案說明</em></p>
+                        <p class="sub-header">專案說明</p>
                         <p>輕量型Access Point控制管理系統，新增網頁客製化的功能</p>
-                        <p><em>使用技術</em></p>
+                        <p class="sub-header">使用技術</p>
                         <p>HTML5、CSS3、JavaScript、jQuery、Google Map API</p>
                         <!-- <h3>Setup Wizard</h3>
                         <p>A step by step setup wizard that help our client quickly and easily to set up the system.</p> -->
@@ -712,9 +712,9 @@
                     <img src="view/images/portfolio/dashboard.png" alt="">
                     <div class="work-popup-content">
                         <h3>雲端無線網路管理系統</h3>
-                        <p><em>專案說明</em></p>
+                        <p class="sub-header">專案說明</p>
                         <p>大量、快速集中、方便管理的Access Point設備雲端控制管理系統</p>
-                        <p><em>使用技術</em></p>
+                        <p class="sub-header">使用技術</p>
                         <p>HTML5、CSS3、JavaScript、React、Redux、Semantic UI、RESTful API、PHP、Lumen</p>
                     </div>
                 </div> 
@@ -732,9 +732,9 @@
                     <a href="http://4ipnet.com/" target="_blank"><img src="view/images/portfolio/4ipnetweb-550.png" alt=""></a>
                     <div class="work-popup-content">
                         <h3>傳象科技官方網站</h3>
-                        <p><em>專案說明</em></p>
+                        <p class="sub-header">專案說明</p>
                         <p>與業務、行銷部門共同合作，翻新傳象科技的官方網站</p>
-                        <p><em>使用技術</em></p>
+                        <p class="sub-header">使用技術</p>
                         <p>HTML5、CSS3、JavaScript、jQuery、Bootstrap、PHP、MySQL、CodeIgniter</p>
                     </div>
                 </div> 
@@ -753,9 +753,9 @@
                     <a href="http://eyetravel.byethost11.com" target="_blank"><img src="view/images/portfolio/shiftphoto.png" alt=""></a>
                     <div class="work-popup-content">
                         <h3>瀑布式圖片流覽網頁</h3>
-                        <p><em>專案說明</em></p>
+                        <p class="sub-header">專案說明</p>
                         <p>使用Masonry JavaScript grid layout library實作圖片瀏覽網頁</p>
-                        <p><em>使用技術</em></p>
+                        <p class="sub-header">使用技術</p>
                         <p>HTML5、CSS3、JavaScript、jQuery、Masonry library</p>
                         <!-- <h3>Shiftphoto</h3>
                         <p>A waterfall layout photo website implemented by Masonry JavaScript library.</p> -->
@@ -774,9 +774,9 @@
                     <img src="view/images/portfolio/wifi-Login-600.png" alt="">
                     <div class="work-popup-content">
                         <h3>Ｗi-Fi 登入頁面</h3>
-                        <p><em>專案說明</em></p>
+                        <p class="sub-header">專案說明</p>
                         <p>因應韓國客戶實作包含英文與韓文的Wi-Fi登入頁面</p>
-                        <p><em>使用技術</em></p>
+                        <p class="sub-header">使用技術</p>
                         <p>Bootstrap、HTML5、CSS3、JavaScript、jQuery</p>
                         <!-- <h3>Wi-fi Login Page</h3>
                         <p>This Wi-Fi Login page is made for Korean client with two languages English and Korean.</p> -->
