Add GA onClick event

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <strong>居住地 :</strong>
                         <br /> 台北市
                     </p>
-                    <a href="https://tinatseng.github.io/personal-website/cv/TinaTseng_CV.pdf" target="_blank" class="btn btn-warning" role="button">Download My CV</a>
+                    <a href="https://tinatseng.github.io/personal-website/cv/TinaTseng_CV.pdf" target="_blank" class="btn btn-warning" role="button" onClick="ga('send', 'event', 'Link', 'Click', 'Download CV');">Download My CV</a>
                 </div>
             </div>
         </div>
