Change GTM account

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-WJQ5WC2');</script>
+    })(window,document,'script','dataLayer','GTM-KXKQJXQ');</script>
     <!-- End Google Tag Manager -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,7 +32,7 @@
 
 <body data-spy="scroll" data-target="#navbar-example">
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WJQ5WC2"
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KXKQJXQ"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <div id="top" class="jumbotron">
